--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kristi&family=Saira+Extra+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-image: url('https://st2.depositphotos.com/1022182/11202/v/600/depositphotos_112024606-stock-illustration-slim-gray-hatched-hearts-in.jpg');
+  background-size: 15%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #000000;
+  min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-bottom: 2px solid #62AB37;
+}
+
+.Header-Title {
+  font-size: 4.5rem;
+  font-family: Bebas Neue;
+  color: #62ab37;
+  text-decoration: none;
+  letter-spacing: .2rem;
+}
+
+.Header-Subtitle {
+  font-size: 2rem;
+  font-style: italic;
+  font-family: Kristi;
   color: white;
+  margin-top: -4.5rem;
+  margin-left: 20rem;
+  letter-spacing: .75rem;
 }
 
-.App-link {
-  color: #61dafb;
+.nav {
+  color: white;
+  font-family: Saira Extra Condensed, sans-serif;
+  font-size: 1.5rem;
+  margin-top: -1.5rem;
+  letter-spacing: .15rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-body {
+  width: 90vw;
+  height: 80vh;
+  border: solid 2px #62AB37;
+  margin: 0 auto;
+  margin-top: 1%;
+  background-color: black;
+  margin-bottom: 2%;
+  padding-top: 2%;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
 }
+
+.main-body-titles {
+  color: white;
+  font-size: 3.5rem;
+  padding: 1%;
+  font-family: Bebas Neue, sans-serif;
+  letter-spacing: 2px;
+  display: flex;
+  justify-content: center;
+  margin-top: -2rem;
+  letter-spacing: 7px;
+}
+
