--- a/src/App.css
+++ b/src/App.css
@@ -3,23 +3,30 @@
 
 
 
+
 .App {
   text-align: center;
 }
 
 body {
-  background-image: url('https://st2.depositphotos.com/1022182/11202/v/600/depositphotos_112024606-stock-illustration-slim-gray-hatched-hearts-in.jpg');
-  background-size: 15%;
+  background-image: url("https://i.ibb.co/p2cJxfC/depositphotos-47957479-stock-illustration-skull-and-flowers-seamless-background.png");
+  background-size: 25%;
 }
 
 .App-header {
   background-color: #000000;
-  min-height: 25vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid #62AB37;
+}
+
+.App-footer {
+  background-color: #000000;
+  min-height: 15vh;
+  border-top: 2px solid #62AB37;
 }
 
 .Header-Title {
@@ -28,6 +35,7 @@ body {
   color: #62ab37;
   text-decoration: none;
   letter-spacing: .2rem;
+  margin-top: -2px;
 }
 
 .Header-Subtitle {
@@ -35,54 +43,84 @@ body {
   font-style: italic;
   font-family: Kristi;
   color: white;
-  margin-top: -4.5rem;
+  margin-top: -4.75rem;
   margin-left: 20rem;
-  letter-spacing: .75rem;
+  letter-spacing: 2px;
+}
+
+.Header-Subtitle:hover .header-sub-hover {
+  color: #980002;
+  transition: 0.5s ease-in-out;
+}
+
+.Header-Title:hover .header-title-hover {
+  color: #980002;
+  transition: 0.5s ease-in-out;
 }
 
 .nav {
-  color: white;
   font-family: Saira Extra Condensed, sans-serif;
   font-size: 1.5rem;
-  margin-top: -1.5rem;
   letter-spacing: .15rem;
+  margin-top: -1rem;
+}
+
+.a {
+  color:#62AB37;
+}
+
+.a:hover {
+  background-image: linear-gradient(
+    to right,
+    #980002,
+    #980002 50%,
+    #62ab37 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  position: relative;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
 }
 
 .main-body {
-  width: 90vw;
-  height: 80vh;
+  width: 85vw;
+  height: 95%;
   border: solid 2px #62AB37;
   margin: 0 auto;
   margin-top: 1%;
   background-color: black;
-  margin-bottom: 2%;
+  margin-bottom: 1rem;
   padding-top: 2%;
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
+  border-radius: 5px;
+  margin-bottom: 3rem;
 }
 
-.main-card { 
-  display: flex;
+.main-card {
   width: 80%;
-  height: 80%;
+  height: 55%;
+  margin: 0 auto;
   padding-bottom: 2%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  border: 2px solid #62AB37;
+  text-align: justify;
+  margin-top: -4rem;
+  margin-bottom: 2rem;
+}
+
+.card-info-section {
+  width: 78%;
+  margin: 0 auto;
+  margin-top: -2.75rem;
 }
 
 .title { 
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-    color: white;
-    font-size: 3rem;
-    padding: 1%;
-    font-family: Bebas Neue, sans-serif;
-    letter-spacing: 2px;
-    margin-bottom: 2rem;
+  color: white;
+  font-size: 3rem;
+  padding: 1%;
+  font-family: Bebas Neue, sans-serif;
+  letter-spacing: 2px;
+  margin-bottom: 1.75rem;
+  text-align: center;
 }
 
 .subtitle {
@@ -92,17 +130,51 @@ body {
   color: #62AB37;
   height: 10%;
   width: 40%;
-  margin-top: 6rem;
-  margin-left: -17rem;
+  margin-top: -4rem;
+  margin-left: 35rem;
+  text-align: center;
 }
 
 .info {
-  width: 75%;
   color: white;
   font-size: 1rem;
-  text-align: justify;
-  padding: 1%;
+  padding: 1rem;
   font-family: Lexend, sans-serif;
   letter-spacing: 2px; 
-  margin-top: -15rem;
+}
+
+.character-card {
+  width: 60%;
+  border: solid 2px rgba(98, 171, 55, .5);
+  color: white;
+  margin: 0 auto;
+  padding: 1%;
+  margin-bottom: 5%;
+  border-radius: 15px;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+}
+
+.character-titles {
+  font-family: Bebas Neue;
+  font-size: 2.75rem;
+  color: white;
+  letter-spacing: .5rem;
+  margin-top: -1px;
+  margin-bottom: 1rem;
+}
+
+.character-info-section {
+  width: 85%;
+  text-align: justify;
+  margin: 0 auto;
+  padding-bottom: .5rem;
+}
+
+.character-card-info {
+  color: white;
+  font-size: 1rem;
+  padding: 1rem;
+  font-family: Lexend, sans-serif;
+  letter-spacing: 2px; 
 }
