--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-image: url("https://i.ibb.co/p2cJxfC/depositphotos-47957479-stock-illustration-skull-and-flowers-seamless-background.png");
+  background-image: url("https://static.vecteezy.com/system/resources/previews/028/154/478/original/of-herringbone-pattern-abstract-seamless-background-line-art-brush-stroke-black-color-on-white-background-simple-line-drawing-design-element-for-backdrop-banner-printing-textile-fabric-vector.jpg");
   background-size: 25%;
 }
 
@@ -65,6 +65,13 @@ body {
   margin-top: -1rem;
 }
 
+a {
+  color:#980002;
+  font-family: Saira Extra Condensed, sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: .15rem;
+}
+
 .a {
   color:#62AB37;
 }
@@ -98,7 +105,7 @@ body {
 }
 
 .main-card {
-  width: 80%;
+  width: 90%;
   height: 55%;
   margin: 0 auto;
   padding-bottom: 2%;
@@ -178,3 +185,29 @@ body {
   font-family: Lexend, sans-serif;
   letter-spacing: 2px; 
 }
+
+/* alexDrake */
+
+.alexDrakeHeader {
+  background-color: #000000;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 2px solid #033806;
+}
+
+.alexDrakeBody {
+  width: 85vw;
+  height: 95%;
+  border: solid 2px #62AB37;
+  margin: 0 auto;
+  margin-top: 1%;
+  background-color: black;
+  margin-bottom: 1rem;
+  padding-top: 2%;
+  border-radius: 5px;
+  margin-bottom: 3rem;
+}
+
